Firebase Added-re

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "cmake.sourceDirectory": "/home/anish/Desktop/MECL APP/mecl_application_1/linux"
+    "cmake.sourceDirectory": "/home/anish/Desktop/MECL APP/mecl_application_1/linux",
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
