--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  firebase_storage:
+  image_picker:
+  permission_handler:
+  firebase_core:
+
 
 dev_dependencies:
   flutter_test:
@@ -47,9 +52,9 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
   url_launcher: ^6.2.6
-  firebase_core: ^2.31.0
   google_sign_in: ^6.2.1
   http:
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
