--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dev_dependencies:
   firebase_core: ^2.31.0
   google_sign_in: ^6.2.1
   image_picker: ^1.1.1
+  firebase_auth: ^4.19.6
   http:
 
 # For information on the generic Dart part of this file, see the
